# TEMED-LLM

./: .gitignore  .pre-commit-config.yaml  Makefile  README.MD  chat_model.py  config.py  data_schema.py  heart.csv  main.py  mian.py  ml_modul.py  nlp_classifiers.py  plots.py  prompts.py  pyprohect.toml  pyproject.toml  requirements.txt  rextract.py  tabular_evaluation.py  utils.py  vorc.py
notebooks/: Extractor_mental_helth_v3.ipynb  trainer.ipynb  tutorial.ipynb
temed_llm/core/: ml_modul.py  rextract.py  vorc.py
temed_llm/data/: data_schema.py  prompts.py
temed_llm/evaluation/: tabular_evaluation.py
temed_llm/nlp/: chat_model.py  nlp_classifiers.py
temed_llm/utils/: config.py  utils.py
temed_llm/visualizations/: plots.py
